Fixed aligments on mobile version

--- a/src/styles/swipers.css
+++ b/src/styles/swipers.css
@@ -47,10 +47,6 @@ body {
   object-fit: cover;
 }
 
-/* .swiper-navigation-color {
-  background-color: white;
-} */
-
 .swiper-button-next {
   width: 3.75rem;
   height: 3.75rem;
